template/longhorn/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.34
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: v1.34
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: v1.34
